- Updated OpengraphImage - Improved the hero banner on mobile (fixed background now) - Switched to `translate:` properties instead of `transform: translate()`

--- a/resources/scss/misc/_tooltip.scss
+++ b/resources/scss/misc/_tooltip.scss
@@ -10,7 +10,8 @@
     top: -50%;
     left: 50%;
 
-    transform: translate(-50%, -50%) scale(0);
+    translate: -50% -50%;
+    scale: 0;
     transform-origin: bottom;
     transition: opacity 0.2s ease-in-out, transform 0.1s ease-in-out;
 }
@@ -21,7 +22,8 @@
     font-weight: 500;
     width: max-content;
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    translate: -50% -50%;
+    scale: 1;
 
     background-color: #000;
     padding: 0.4rem 1rem;
@@ -36,8 +38,9 @@
     z-index: 1;
     bottom: -50%;
     left: 50%;
-
-    transform: translate(-50%, 70%) scale(0);
+    
+    translate: -50% 70%;
+    scale: 0;
     transform-origin: top;
     transition: opacity 0.2s ease-in-out, transform 0.1s ease-in-out;
 }
@@ -48,7 +51,8 @@
     font-weight: 500;
     width: max-content;
     opacity: 1;
-    transform: translate(-50%, 70%) scale(1);
+    translate: -50% 70%;
+    scale: 1;
 
     background-color: #000;
     padding: 0.4rem 1rem;
